--- a/src/components/common/imageWrapper.astro
+++ b/src/components/common/imageWrapper.astro
@@ -3,7 +3,7 @@ import type { ImageMetadata } from "astro";
 import { Image } from "astro:assets";
 import path from "node:path";
 
-import { url } from "@utils/url-utils";
+import { url } from "@utils/url";
 
 
 interface Props {
