--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -4,7 +4,7 @@ import { Icon } from "astro-icon/components";
 import { navBarConfig, siteConfig } from "@/config";
 import { LinkPresets } from "@constants/link-presets";
 import { LinkPreset, type NavBarLink } from "@/types/config";
-import { url } from "@utils/url-utils";
+import { url } from "@utils/url";
 import { getNavbarTransparentModeForWallpaperMode } from "@utils/wallpaper";
 import DropdownMenu from "@components/navbar/dropdownMenu.astro";
 import NavMenuPanel from "@components/navbar/navMenuPanel.astro";
