--- a/src/components/navbar/dropdownMenu.astro
+++ b/src/components/navbar/dropdownMenu.astro
@@ -3,7 +3,7 @@ import { Icon } from "astro-icon/components";
 
 import { LinkPreset, type NavBarLink } from "@/types/config";
 import { LinkPresets } from "@constants/link-presets";
-import { url } from "@utils/url-utils";
+import { url } from "@utils/url";
 
 
 interface Props {
