--- a/src/components/pagination.astro
+++ b/src/components/pagination.astro
@@ -2,7 +2,7 @@
 import type { Page } from "astro";
 import { Icon } from "astro-icon/components";
 
-import { url } from "@utils/url-utils";
+import { url } from "@utils/url";
 
 
 interface Props {
