--- a/src/components/sidebar.astro
+++ b/src/components/sidebar.astro
@@ -1,7 +1,7 @@
 ---
 import type { MarkdownHeading } from "astro";
 
-import { widgetManager } from "@utils/widget-manager";
+import { widgetManager } from "@utils/widget";
 import Profile from "@components/sidebar/profile.astro";
 import Announcement from "@components/sidebar/announcement.astro";
 import Categories from "@components/sidebar/categories.astro";
