--- a/src/layouts/grid.astro
+++ b/src/layouts/grid.astro
@@ -4,16 +4,16 @@ import { Icon } from "astro-icon/components";
 
 import { siteConfig } from "@/config";
 import { BANNER_HEIGHT, MAIN_PANEL_OVERLAPS_BANNER_HEIGHT } from "@constants/constants";
-import { widgetManager } from "@utils/widget-manager";
-import BackToTop from "@components/backToTop.astro";
-import Footer from "@components/footer.astro";
+import { widgetManager } from "@utils/widget";
+import IconifyLoader from "@components/common/iconifyLoader.astro";
 import Navbar from "@components/navbar.astro";
-import SideBar from "@components/sidebar.astro";
 import FullscreenWallpaper from "@components/fullscreenWallpaper.astro";
 import Banner from "@components/banner.astro";
-import IconifyLoader from "@components/common/iconifyLoader.astro";
-import Layout from "./Layout.astro";
-import "@styles/maingrid.css";
+import SideBar from "@components/sidebar.astro";
+import Footer from "@components/footer.astro";
+import BackToTop from "@components/backToTop.astro";
+import BaseLayout from "./base.astro";
+import "@styles/grid.css";
 
 /**
  * Wallpaper
@@ -187,7 +187,7 @@ const mainContentClass = `
     .replace(/\s+/g, " ");
 ---
 
-<Layout
+<BaseLayout
     title={title}
     banner={banner}
     description={description}
@@ -345,4 +345,4 @@ const mainContentClass = `
             <BackToTop />
     </div>
 </div>
-</Layout>
+</BaseLayout>
