--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -3,7 +3,7 @@ import * as fs from "node:fs";
 import * as path from "node:path";
 
 import { footerConfig, profileConfig } from "@/config";
-import { url } from "@utils/url-utils";
+import { url } from "@utils/url";
 
 
 const currentYear = new Date().getFullYear();
@@ -19,7 +19,7 @@ if (footerConfig.enable) {
         try {
             const footerConfigPath = path.join(
                 process.cwd(),
-                "src",
+                "public",
                 "FooterConfig.html",
             );
             customFooterHtml = fs.readFileSync(footerConfigPath, "utf-8");
