--- a/src/components/post/license.astro
+++ b/src/components/post/license.astro
@@ -2,7 +2,7 @@
 import { Icon } from "astro-icon/components";
 
 import { postConfig, profileConfig } from "@/config";
-import { formatDateToYYYYMMDD } from "@utils/date-utils";
+import { formatDateToYYYYMMDD } from "@utils/date";
 import { i18n } from "@i18n/translation";
 import I18nKey from "@i18n/i18nKey";
 
