--- a/src/components/post/postCard.astro
+++ b/src/components/post/postCard.astro
@@ -5,8 +5,8 @@ import type { CollectionEntry } from "astro:content";
 
 import I18nKey from "@i18n/i18nKey";
 import { i18n } from "@i18n/translation";
-import { getFileDirFromPath } from "@utils/url-utils";
-import ImageWrapper from "@/components/common/imageWrapper.astro";
+import { getFileDirFromPath, getPostUrl } from "@utils/url";
+import ImageWrapper from "@components/common/imageWrapper.astro";
 import PostMetadata from "./postMeta.astro";
 
 
