--- a/src/components/post/postMeta.astro
+++ b/src/components/post/postMeta.astro
@@ -1,8 +1,8 @@
 ---
 import { Icon } from "astro-icon/components";
 
-import { formatDateToYYYYMMDD } from "@utils/date-utils";
-import { getCategoryUrl, getTagUrl } from "@utils/url-utils";
+import { formatDateToYYYYMMDD } from "@utils/date";
+import { getCategoryUrl, getTagUrl } from "@utils/url";
 import { umamiConfig } from '@/config';
 import { i18n } from "@i18n/translation";
 import I18nKey from "@i18n/i18nKey";
