--- a/src/components/postPage.astro
+++ b/src/components/postPage.astro
@@ -1,7 +1,7 @@
 ---
 import type { CollectionEntry } from "astro:content";
 
-import { getPostUrl } from "@utils/url-utils";
+import { getPostUrl } from "@utils/url";
 import PostCard from "@components/post/postCard.astro";
 
 
