--- a/src/components/sidebar/categories.astro
+++ b/src/components/sidebar/categories.astro
@@ -1,6 +1,6 @@
 ---
-import { getCategoryList } from "@utils/content-utils";
-import { widgetManager } from "@utils/widget-manager";
+import { getCategoryList } from "@utils/content";
+import { widgetManager } from "@utils/widget";
 import { i18n } from "@i18n/translation";
 import I18nKey from "@i18n/i18nKey";
 import ButtonLink from "@/components/common/buttonLink.astro";
