--- a/src/components/sidebar/profile.astro
+++ b/src/components/sidebar/profile.astro
@@ -2,7 +2,7 @@
 import { Icon } from "astro-icon/components";
 
 import { profileConfig, umamiConfig } from "@/config";
-import { url } from "@utils/url-utils";
+import { url } from "@utils/url";
 import ImageWrapper from "@/components/common/imageWrapper.astro";
 
 
