--- a/src/components/sidebar/tags.astro
+++ b/src/components/sidebar/tags.astro
@@ -1,9 +1,9 @@
 ---
 import I18nKey from "@i18n/i18nKey";
 import { i18n } from "@i18n/translation";
-import { getTagList } from "@utils/content-utils";
-import { getTagUrl } from "@utils/url-utils";
-import { widgetManager } from "@utils/widget-manager";
+import { getTagList } from "@utils/content";
+import { getTagUrl } from "@utils/url";
+import { widgetManager } from "@utils/widget";
 import ButtonTag from "@/components/common/buttonTag.astro";
 import WidgetLayout from "./widgetLayout.astro";
 
