--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,7 +7,7 @@ import { getEntry, render } from "astro:content";
 import I18nKey from "@i18n/i18nKey";
 import { i18n } from "@i18n/translation";
 import Markdown from "@components/common/markdown.astro";
-import MainGridLayout from "@layouts/MainGridLayout.astro";
+import GridLayout from "@layouts/grid.astro";
 
 
 const aboutPost = await getEntry("spec", "about");
@@ -19,7 +19,7 @@ if (!aboutPost) {
 const { Content } = await render(aboutPost);
 ---
 
-<MainGridLayout title={i18n(I18nKey.about)} description={i18n(I18nKey.about)}>
+<GridLayout title={i18n(I18nKey.about)} description={i18n(I18nKey.about)}>
     <div class="flex w-full rounded-[var(--radius-large)] overflow-hidden relative min-h-32">
         <div class="card-base z-10 px-9 py-6 relative w-full ">
             <Markdown class="mt-2">
@@ -27,4 +27,4 @@ const { Content } = await render(aboutPost);
             </Markdown>
         </div>
     </div>
-</MainGridLayout>
+</GridLayout>
